# slopcheck

./: LICENSE  README.md  pyproject.toml
src/slopcheck/: __main__.py  cli.py  report.py  scanner.py
src/slopcheck/rules/: __init__.py  code.py  commits.py  markdown.py
tests/: test_cli.py  test_code.py  test_markdown.py  test_report.py
