[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slopcheck"
version = "0.1.0"
description = "Detect AI slop in your repo — with zero AI and zero dependencies."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "chanu" }]
keywords = ["linter", "ai", "slop", "code-quality", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Repository = "https://github.com/chanu4789/slopcheck"

[project.scripts]
slopcheck = "slopcheck.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
